--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -57,7 +57,9 @@
       </div>
     </header>
 
-    <main class="divider"></main>
+    <main class="divider">
+      <h2>Top Products</h2>
+    </main>
 
     <footer>&copy;NOT a real business</footer>
   </body>
